# NYC-Taxi-Demo

./: .env.example  .gitignore  README.md  pyproject.toml
agents/agent_a_raw/: agent.py  prompt.py
agents/agent_b_dbt/: agent.py  prompt.py  tools.py
agents/common/: bq.py  databricks.py  gemini_client.py  schemas.py
databricks/: taxi_metrics.sql  taxi_metrics_monthly.sql
dbt_taxi/: .user.yml  dbt_project.yml  profiles.yml
dbt_taxi/models/marts/: _marts.yml  dim_zones.sql  fct_trips.sql
dbt_taxi/models/staging/: _staging.yml  stg_taxi_zones.sql  stg_yellow_trips.sql
demo/: questions.md  run_compare.py
tests/: test_agents_smoke.py
