[project]
name = "nyc-taxi-trust-demo"
version = "0.1.0"
description = "Data agents that don't make things up: dbt + Gemini"
requires-python = ">=3.10"
dependencies = [
    "dbt-bigquery>=1.7,<2",
    "google-genai>=1.0",
    "google-cloud-bigquery>=3.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
